src/ui/snapshots/sauva__ui__render__tests__browse_ranges_standard.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Browse / Ranges                                                                     U+0041

 Ranges                                            Plane 0  │ Selection
  U+0000–U+00FF                                             ┃  Plane  0
  U+0100–U+01FF                                             ┃  Name   Basic Multilingual Plane
  U+0200–U+02FF                                             │  Range  0 of 255
  U+0300–U+03FF                                             │  Start  U+0000
  U+0400–U+04FF                                             │  End    U+00FF
  U+0500–U+05FF                                             │  Blocks
  U+0600–U+06FF                                             │    Basic Latin
  U+0700–U+07FF                                             │    Latin-1 Supplement
  U+0800–U+08FF                                             │
  U+0900–U+09FF                                             │
  U+0A00–U+0AFF                                             │
  U+0B00–U+0BFF                                             │
  U+0C00–U+0CFF                                             │
  U+0D00–U+0DFF                                             │
  U+0E00–U+0EFF                                             │
  U+0F00–U+0FFF                                             │
  U+1000–U+10FF                                             │
  U+1100–U+11FF                                             │
  U+1200–U+12FF                                             │
  U+1300–U+13FF                                             │
  U+1400–U+14FF                                             │
  U+1500–U+15FF                                             │
  U+1600–U+16FF                                             │
  U+1700–U+17FF                                             │
  U+1800–U+18FF                                             │

 k/j Move  C-u/C-d Jump  g/G Ends  Enter Points  BS Back  Esc Close  q Quit                 F1 Help
