src/ui/snapshots/sauva__ui__render__tests__browse_ranges_wide_at_last_range.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Browse / Ranges                                                                                                             U+FF41

 Ranges                                                                                    Plane 0  │ Selection
  U+DD00–U+DDFF                                                                                     │  Plane  0
  U+DE00–U+DEFF                                                                                     │  Name   Basic Multilingual Plane
  U+DF00–U+DFFF                                                                                     │  Range  255 of 255
  U+E000–U+E0FF                                                                                     │  Start  U+FF00
  U+E100–U+E1FF                                                                                     │  End    U+FFFF
  U+E200–U+E2FF                                                                                     │  Blocks
  U+E300–U+E3FF                                                                                     │    Halfwidth and Fullwidth Forms
  U+E400–U+E4FF                                                                                     │    Specials
  U+E500–U+E5FF                                                                                     │
  U+E600–U+E6FF                                                                                     │
  U+E700–U+E7FF                                                                                     │
  U+E800–U+E8FF                                                                                     │
  U+E900–U+E9FF                                                                                     │
  U+EA00–U+EAFF                                                                                     │
  U+EB00–U+EBFF                                                                                     │
  U+EC00–U+ECFF                                                                                     │
  U+ED00–U+EDFF                                                                                     │
  U+EE00–U+EEFF                                                                                     │
  U+EF00–U+EFFF                                                                                     │
  U+F000–U+F0FF                                                                                     │
  U+F100–U+F1FF                                                                                     │
  U+F200–U+F2FF                                                                                     │
  U+F300–U+F3FF                                                                                     │
  U+F400–U+F4FF                                                                                     │
  U+F500–U+F5FF                                                                                     │
  U+F600–U+F6FF                                                                                     │
  U+F700–U+F7FF                                                                                     │
  U+F800–U+F8FF                                                                                     │
  U+F900–U+F9FF                                                                                     │
  U+FA00–U+FAFF                                                                                     │
  U+FB00–U+FBFF                                                                                     │
  U+FC00–U+FCFF                                                                                     ┃
  U+FD00–U+FDFF                                                                                     ┃
  U+FE00–U+FEFF                                                                                     ┃
  U+FF00–U+FFFF                                                                                     ┃

 k/j Move  C-u/C-d Jump  g/G Ends  Enter Points  BS Back  Esc Close  q Quit                                                         F1 Help
