src/ui/snapshots/sauva__ui__render__tests__copy_dialog_failure_minimum.snap
---
source: src/ui/render.rs
expression: text
---
 sauva / Sequence                              2/6 · U+0301


  ┌ Copy ────────────────────────────────────────────────┐
  │ Sequence · CP 2/6 · U+0301                           │
  │                                                      │
  │  Code Point                                  U+0301  │
  │  Grapheme Cluster                     2 code points  │
  │  Whole Input                          6 code points  │
  │                                                      │
  │ Preview · 2 CP · 3 bytes                             │
  │ Á                                                    │
  │ U+0041 U+0301                                        │
  └──────────────────────────────────────────────────────┘

 Clipboard is busy
