src/ui/snapshots/sauva__ui__render__tests__details_aliases_standard.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
┌ Inspector ───────────────────────────────────────────────┐┌ Glyph Preview ───────────────────────┐
│ Identity                                                │││ Font     —                           │
│   Character                  <CONTROL>                  │││ Version  —                           │
│   Code Point                 U+0000                     │││                                      │
│   Primary Name               No Primary Name            │││                                      │
│   Aliases                    NULL — control             │││                                      │
│                              NUL — abbreviation         │││                                      │
│   Plane                      0 — Basic Multilingual     │││                                      │
│                              Plane                      │││                                      │
│   Block                      Basic Latin                │││                                      │
│                                                         │││                                      │
│ Classification                                          │││                                      │
│   General Category           Cc — Control               │││                                      │
│   Script                     Common                     │││                                      │
│   Age                        1.1                        │││         Graphics unavailable         │
│   East Asian Width           N — Neutral                │││  Use --graphics force to try anyway. │
│   Canonical Combining Class  0 — Not Reordered          │││                                      │
│   Bidi Class                 BN — Boundary Neutral      │││                                      │
│   Default Ignorable          No                         │││                                      │
│                                                         │││                                      │
│ Encoding                                                │││                                      │
│   UTF-8                      00                         │││                                      │
│   UTF-16                     0000                       │││                                      │
│   HTML Decimal               &#0;                        ││                                      │
│   HTML Hex                   &#x0;                       ││                                      │
│   Rust char                  '\u{0}'                     ││                                      │
│   Unicode Escape             \u0000                      ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
 h/l: Point  k/j: Field  C-u/C-d: Page  y: Copy  /: Search  p/r/b/c: Browse  q: Quit  F1: Help
