src/ui/snapshots/sauva__ui__render__tests__details_canonical_decomposition_minimum_at_end.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva · Inspector                                   U+00E9
┌ Properties ──────────────────────────────────────────────┐
│   HTML Hex                   &#xE9;                      │
│   Rust char                  '\u{E9}'                    │
│   Unicode Escape             \u00E9                      │
│                                                          │
│ Normalization                                            │
│   Decomposition Type         Canonical                   │
│   Decomposition                                          │
│   U+0065 LATIN SMALL LETTER E                            │
│   U+0301 COMBINING ACUTE ACCENT                         ││
│                                                         ││
│ Data                                                    ││
│   Unicode Version            17.0.0                     ││
└──────────────────────────────────────────────────────────┘
 h/l: Point  k/j: Field  y: Copy  q: Quit          F1: Help
