src/ui/snapshots/sauva__ui__render__tests__details_canonical_decomposition_minimum_at_middle.snap
---
source: src/ui/render.rs
expression: "render_after_inspector_move(&state, width, height,\nInspectorMove::PageForward,)"
---
 sauva / Inspector                                   U+00E9

  Code Point                 U+00E9                       ┃
  Primary Name                                            ┃
    LATIN SMALL LETTER E WITH ACUTE                       ┃
  Aliases                    None                         ┃
  Plane                      0 — Basic Multilingual Plane
  Block                      Latin-1 Supplement
 ─────────────────────────────────────────────────────────
 Classification
  General Category           Ll — Lowercase Letter
  Script                     Latin
  Age                        1.1
  East Asian Width           A — Ambiguous

 h/l Point  k/j Field  y Copy  / Search  q Quit     F1 Help
